# jira_gui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
docs/: issues.md
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  prog_handler.cpp  prog_handler.hh  temp_file_hander.cpp  temp_file_handler.hh  utils.cc  utils.hh
